# GameEngine

./: .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
lib/: CMakeLists.txt
resources/engine/network/: ui.js  websocket.js
resources/engine/network/styles/: 1.css
resources/engine/shaders/: debug.frag  debug.vert  rect.vert  shader.frag  shader.vert  text.frag  text.vert
src/: GameEngine.h
src/core/: Components.cpp  Components.h  Entry.cpp  Entry.h  Game.cpp  Game.h  PCH.cpp  PCH.h  Scene.cpp  Scene.h  System.h
src/network/: HTTPConnection.cpp  HTTPRouter.cpp  HTTPRouter.h  SessionStorage.cpp  SessionStorage.h  WebHandler.cpp  WebHandler.h  WebsocketConnection.cpp  WebsocketConnection.h  WebsocketHandler.cpp  WebsocketHandler.h  WebsocketRouter.h
src/network/HTTP/: Connection.cpp  Connection.h  Request.cpp  Request.h  RequestHeader.cpp  RequestHeader.h  Response.cpp  Response.h  Router.cpp  Router.h  SessionStorage.cpp  SessionStorage.h
src/network/websocket/: BasicHandler.h  Connection.cpp  Connection.h  Frame.cpp  Frame.h
src/physics/: AABB.h  Collision.cpp  Collision.h  CollisionManifold.cpp  CollisionManifold.h  CollisionSolvers.cpp  CollisionSolvers.h  Components.cpp  Components.h  Engine.cpp  Engine.h  QuadTree.h  Shapes.cpp  Shapes.h
src/renderer/: ImageLoader.cpp  ImageLoader.h  RectanglePacker.cpp  RectanglePacker.h  TextLoader.cpp  TextLoader.h  TextureMap.cpp  TextureMap.h  Window.cpp  Window.h
src/renderer/ttf/: FontParser.cpp  FontParser.h  InstructionExecutor.cpp  InstructionExecutor.h
src/renderer/vulkan/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  Pipeline.cpp  Pipeline.h  Renderpass.cpp  Renderpass.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
src/util/: Area.h  BasicLog.h  BitMask.h  DebugGraphics.cpp  DebugGraphics.h  Endianess.cpp  Endianess.h  EquationSolvers.h  FileManager.cpp  FileManager.h  FundamentalType.h  Hashing.cpp  Hashing.h  Log.cpp  Log.h  Math.h  Reflection.h  Strings.h  TemplateConcepts.h  Vec2D.h  Vec3D.h  VectorStreamBuffer.h  WeirdPointer.h
src/util/math/: Area.h  EquationSolvers.h  Math.h  Matrix.h  PI.h  Vec2D.h  Vec3D.h
src/util/serialization/: Binary.h  ClassStructure.h  JSON.h  Print.h  Serialization.h
